--- a/index.html
+++ b/index.html
@@ -10,157 +10,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Order summary card</title>
 
-  <style>
-    .container {
-      display: grid;
-
-    }
-
-    .card {
-      position: relative;
-      top: 50px;
-      width: 400px;
-      border: 1px solid hsl(225, 100%, 98%);
-      margin: 0 auto;
-      background-color: #fff;
-      border-radius: 10px;
-      box-shadow: 1px 1px 1px hsl(225deg 100% 98%), 1px 1px 1px hsl(225deg 100% 98%);
-
-    }
-
-    body {
-      background-image: url('/images/pattern-background-desktop.svg');
-      background-repeat: no-repeat;
-      background-size: 100%;
-      font-family: 'Red Hat Display';
-      font-size: 16px;
-      background-color: hsl(225, 100%, 94%);
-    }
-
-    h1 {
-      font-size: 2em;
-      text-align: center;
-      color: hsl(223, 47%, 23%);
-      font-weight: 900;
-    }
-
-    button {
-      font-family: 'Red Hat Display';
-      font-size: 1.2em;
-      font-weight: 700;
-      color: #fff;
-      border: 1px solid hsl(228, 45%, 44%);
-      border-radius: 10px;
-      background-color: hsl(245, 75%, 52%);
-      width: 100%;
-      height: 50px;
-      box-shadow: 0px 25px 21px hsl(228deg 35% 80% / 53%);
-
-    }
-
-    button:hover {
-      background-color: hsl(242, 77%, 68%)
-    }
-
-    p {
-      font-size: 1em;
-      font-weight: 500;
-      margin: 0 auto;
-      color: hsl(224, 23%, 55%);
-      text-align: center;
-    }
-
-    .card .card-body {
-      width: 80%;
-      margin: 0 auto;
-
-    }
-
-    .card .info-card {
-
-      display: flex;
-      border-radius: 5px;
-      box-shadow: 1px 1px 5px hsl(0deg 0% 87% / 42%);
-      text-align: center;
-      background-color: hsl(225, 100%, 98%);
-      margin: 30px 0;
-      flex-wrap: nowrap;
-      align-items: center;
-      justify-content: center;
-      align-content: space-around;
-      flex-direction: row;
-    }
-
-
-    .img-header-card {
-      width: 100%;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-    }
-
-    .info-text {
-      color: hsl(224, 23%, 55%);
-      text-align: start;
-      padding: 10px;
-      display: inline;
-      font-weight: 500;
-    }
-
-    .info-card a {
-      padding-left: 20px;
-      display: inline;
-    }
-
-    .info-card a:hover {
-      color: hsl(242, 77%, 68%);
-      text-decoration: none;
-    }
-
-    .info-img {
-      margin: 10px 5px 0px 0px;
-      width: 40px;
-      display: inline;
-    }
-
-    .footer-but {
-      width: 100%;
-      text-align: center;
-    }
-
-    .footer-link {
-      text-align: center;
-      margin: 35px;
-
-    }
-
-    .footer-link a {
-      text-decoration: none;
-      color: hsl(224, 23%, 55%);
-      font-weight: 900;
-
-    }
-
-    .footer-link a:hover {
-      color: hsl(223, 47%, 23%)
-    }
-
-    .item {
-      display: inline-block;
-    }
-
-    h3 {
-      color: hsl(223, 47%, 23%);
-      font-weight: 900;
-      margin: 5px;
-    }
-
-    .price {
-      margin-left: 5px;
-      text-align: left;
-    }
-  </style>
+  
 </head>
 
 <body>
