--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container" role="container">
     <div class="card">
       <div class="card-header">
         <picture>
@@ -36,7 +36,7 @@
           <div class="item"> <img src="/images/icon-music.svg" alt="icon music"></div>
           <div class="item">
             <div class="info-text">
-              <h3> Annual Plan</h3>
+              <h2> Annual Plan</h2>
               <p class="price">$59.99/year</p>
             </div>
           </div>
