--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   
 </head>
 
-<body>
-  <div class="container" role="container">
+<body class="container">
+ 
     <div class="card">
       <div class="card-header">
         <picture>
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-  </div>
+ 
 </body>
 
 </html>
