--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="container">
  
-    <div class="card">
+    <div class="card" role="contentinfo">
       <div class="card-header">
         <picture>
           <img src="/images/illustration-hero.svg" alt="image header" class="img-header-card">
