--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" role="main">
 
 <head>
   <meta charset="UTF-8">
@@ -16,9 +16,9 @@
   
 </head>
 
-<body class="container">
- 
-    <div class="card" role="contentinfo">
+<body>
+  <div class="container" role="contentinfo">
+    <div class="card">
       <div class="card-header">
         <picture>
           <img src="/images/illustration-hero.svg" alt="image header" class="img-header-card">
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
- 
+  </div>
 </body>
 
 </html>
