--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" role="main">
+<html>
 
 <head>
   <meta charset="UTF-8">
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/css/styles.css">
   <title>Frontend Mentor | Order summary card</title>
 
-  
+
 </head>
 
 <body>
