--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div class="container" role="contentinfo">
+  <main class="container" role="main">
     <div class="card">
       <div class="card-header">
         <picture>
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </main>
 </body>
 
 </html>
