--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <main class="container" role="main">
+  <main class="container">
     <div class="card">
       <div class="card-header">
         <picture>
